Revision history for {{$dist->name}}

{{$NEXT}}
  - Added support for sending CommerceIndicator in Auth requests

0.010006  2015-02-19
	- Fixed filename for production CyberSource Transaction WSDL

0.010005  2014-11-19
	- require Type::Utils version 0.040 for failing cpan test

0.010004  2014-11-18
	- remove  Moose::Util::TypeConstraints from ::Client GH #2

0.010003  2014-06-19
	- use strict mode for ::ProjectDistDir
		- fixes isolated bugs in certain deployments, if you haven't had
		  problems with ::Client locating the wsdl/xsd this hasn't impacted you
	[DEPRECATIONS]
	- added deprecation warnings around alias inializers
	  - these will be removed as if they were put in 0.01000

0.010002  2014-06-18
	- fix Type::Tiny code to use Invocant

0.010001  2014-06-18
	- fix tests for perl 5.20 to not trip on Types::Tiny bug
	- fix SOAPFault documentation

0.010000  2014-06-17
	[NEWS]
	- Converted to Moose::Exception
	  - IMPORTANT read the removal section
	  - NEVER ever check for ->isa('Moose::Exception') because that's an
	    implementation detail and the superclass may change in the future,
	    check final classes or roles as documented instead (MST)
	  - read the updated example in Business::CyberSource
	- Added support for American Express Electronic Verification information
	[REMOVAL]
	- Exception::Base - Some exception objects were renamed
	  - CHECK YOUR EXCEPTION HANDLING, it's probably wrong now, sorry. This
	    shouldn't change again, having external classes means supporting new
	    classes will be easier, existing namespaces were awkward for external
	    classes
	- MooseX::StrictConstructor
	- Path::Class
	[DEPRECATIONS]
	- several undocumented aliases
	- trace, Moose::Exception has trace and this conflicted, renamed
	  http_trace

0.009002  2013-11-29
	- update encoding
	- use Test::Requires for NetAddr::IP tests

0.009001  2013-11-29
	- remove dependency on Class::Load, this is being removed from Moose, use
	  Module::Runtime instead