@@ -59,7 +59,8 @@ sub test_successful_sale {
     is( $ret->reason_code,           100,     'check reason_code'    );
     is( $ret->currency,             'USD',    'check currency'       );
     is( $ret->auth->amount,         '3000.01',    'check amount'     );
-    is( $ret->auth->avs_code, ($args{card_type} eq 'discover') ? 'A' : 'Y', 'check avs_code' );
+    #is( $ret->auth->avs_code, ($args{card_type} eq 'discover') ? 'A' : 'Y', 'check avs_code' );
+    is( $ret->auth->avs_code, 'Y', 'check avs_code' );
     is( $ret->auth->avs_code_raw,   'Y',       'check avs_code_raw'  );
     is( $ret->auth->processor_response, '00',  'check processor_response');
     is( $ret->reason_text, 'Successful transaction', 'check reason_text' );
